--- a/css/main.scss
+++ b/css/main.scss
@@ -179,16 +179,28 @@ body {
   background-image: url("/img/26113747930_686f33bed2_k.jpg");
 }
 .img9 {
-  background-image: url("/img/26190093491_413872a647_k.jpg");
+  background-image: url("/img/26113488820_aa3a4a6695_k.jpg");
 }
 .img10 {
-  background-image: url("/img/24938213760_2550cd48be_k.jpg");
+  background-image: url("/img/26190093491_413872a647_k.jpg");
 }
 .img11 {
-  background-image: url("/img/25207892046_2c0ed16f0a_k.jpg");
+  background-image: url("/img/25784494413_d900379ef1_k.jpg");
 }
 .img12 {
-  background-image: url("/img/25784494413_d900379ef1_k.jpg");
+  background-image: url("/img/25207892046_2c0ed16f0a_k.jpg");
+}
+.img13 {
+  background-image: url("/img/24938213760_2550cd48be_k.jpg");
+}
+.img14 {
+  background-image: url("/img/26229513566_57103b1c8c_k.jpg");
+}
+.img15 {
+  background-image: url("/img/25652151093_ea726f177d_k.jpg");
+}
+.img16 {
+  background-image: url("/img/26190093491_413872a647_k.jpg");
 }
 
 .btn-order {
@@ -209,7 +221,7 @@ body {
   display: inline-block;
   cursor: pointer;
   position: relative;
-  padding: 10px 20px;
+  padding: 0 10px;
   color: #FFF;
   position: relative;
   z-index: 2;
