update menu headings

--- a/css/main.scss
+++ b/css/main.scss
@@ -296,9 +296,9 @@ footer {
       display: block;
       width: 98%;
       position: absolute;
-      top: 22px;
+      top: 21px;
       left: 1%;
-      border-bottom: 1px dotted #a2a2a2;
+      border-bottom: 3px solid #333;
       z-index: -1;
     }
   }
