--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,10 +1,24 @@
 
 
 <div class="map">
-  <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyACZebDkk-lEgcL3ddcV37R_b2kWUYtVx0'></script>
-  <div style='overflow:hidden;height:400px;width:100%;'>
-    <div id='gmap_canvas' style='height:400px;width:100%;'></div>
-    <style>#gmap_canvas img{max-width:none!important;background:none!important}</style>
-  <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=a92132d9a68d8de40dbb79fff08a7ef12d232087'></script>
-  <script type='text/javascript'>function init_map(){var myOptions = {zoom:21,center:new google.maps.LatLng(38.469207301412176,23.6053730472214),mapTypeId: google.maps.MapTypeId.SATELLITE};map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(38.469207301412176,23.6053730472214)});infowindow = new google.maps.InfoWindow({content:'<strong>Κουζίνα από Σπίτι</strong><br>Λεωφ. Χαϊνά 60<br>34132 Χαλκίδα<br>'});google.maps.event.addListener(marker, 'click', function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+  <div id='gmap_canvas' style='height:400px;width:100%;'></div>
 </div>
+
+<script src='https://maps.googleapis.com/maps/api/js?v=3.exp'></script>
+<script type='text/javascript'>
+  function init_map(){
+    var myOptions = {
+      zoom: 21,
+      center: new google.maps.LatLng(38.469207301412176,23.6053730472214),
+      mapTypeId: google.maps.MapTypeId.SATELLITE
+    };
+    map = new google.maps.Map(document.getElementById('gmap_canvas'), myOptions);
+    marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(38.469207301412176,23.6053730472214)});
+    infowindow = new google.maps.InfoWindow({content:'<strong>Κουζίνα από Σπίτι</strong><br>Χαϊνά 60, Χαλκίδα<br>'});
+    google.maps.event.addListener(marker, 'click', function(){
+      infowindow.open(map,marker);
+    });
+    infowindow.open(map,marker);
+  }
+  google.maps.event.addDomListener(window, 'load', init_map);
+</script>
