--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,6 +1,6 @@
 
 
-<div class="menu">
+<div class="menu container-fluid">
   {% for category in site.data.menu %}
     <div class="menu-section">
       <h3>{{ category.name }}</h3>
