--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,10 +3,12 @@
 <footer>
   <p class="app-stores">
     <a href="https://www.facebook.com/kouzinaapospiti/" target="_blank">
+      συχνάζουμε και στο φεϊσμπουκ
       <img src="/img/fb2.png" alt="Like our page on Facebook">
     </a>
     <a href="https://play.google.com/store/apps/details?id=com.shopilab.kouzinaapospiti" target="_blank">
       <img src="/img/google-play.png" alt="Google PLay">
+      κι έχουμε και απ για αντροϊντ
     </a>
   </p>
 </footer>
