--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,18 @@
 
 
 <footer>
-  <p class="app-stores">
-    <a href="https://www.facebook.com/kouzinaapospiti/" target="_blank">
-      συχνάζουμε και στο φεϊσμπουκ
-      <img src="/img/fb2.png" alt="Like our page on Facebook">
-    </a>
-    <a href="https://play.google.com/store/apps/details?id=com.shopilab.kouzinaapospiti" target="_blank">
-      <img src="/img/google-play.png" alt="Google PLay">
-      κι έχουμε και απ για αντροϊντ
-    </a>
-  </p>
+  <div class="app-stores row">
+    <div class="col-xs-6">
+      <a href="https://www.facebook.com/kouzinaapospiti/" target="_blank">
+        <img src="/img/fb2.png" alt="Like our page on Facebook">
+      </a><br>
+      <span class="hidden-lg-down">συχνάζουμε και στο φέισμπουκ</span>
+    </div>
+    <div class="col-xs-6">
+      <a href="https://play.google.com/store/apps/details?id=com.shopilab.kouzinaapospiti" target="_blank">
+        <img src="/img/google-play.png" alt="Google PLay">
+      </a><br>
+      <span class="hidden-lg-down">κι έχουμε και αππ για αντρόιντ</span>
+    </div>
+  </div>
 </footer>
