--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
       <a href="https://play.google.com/store/apps/details?id=com.shopilab.kouzinaapospiti" target="_blank">
         <img src="/img/google-play.png" alt="Google PLay">
       </a><br>
-      <span class="hidden-lg-down">κι έχουμε και αππ για αντρόιντ</span>
+      <span class="hidden-lg-down">έχουμε και αππ για αντρόιντ</span>
     </div>
   </div>
 </footer>
