--- a/_includes/home-section-3.html
+++ b/_includes/home-section-3.html
@@ -33,7 +33,7 @@
         </p>
         <h3>Οι λάτρεις της vegan διατροφής</h3>
         <p>
-          θα ανακαλύψουν όχι μόνο κλασσικά πιάτα λαδερών και όσπριων αλλά και προτάσεις φαγητών από ευεργετικά για τον οργανισμό προϊόντα, όπως φαγόπυρο, κινόα, προϊόντα ζέας κ.ά.
+          θα ανακαλύψουν όχι μόνο κλασσικά πιάτα λαδερών και οσπρίων αλλά και προτάσεις φαγητών από ευεργετικά για τον οργανισμό προϊόντα, όπως φαγόπυρο, κινόα, προϊόντα ζέας κ.ά.
         </p>
         <p>
           Απολαύστε τις γεύσεις μας στο ζεστό χώρο του εστιατορίου νιώθοντας σαν το σπίτι σας ή στο δικό σας χώρο με ένα απλό τηλεφώνημα!
