minor UI updates

--- a/_includes/home-section-3.html
+++ b/_includes/home-section-3.html
@@ -23,15 +23,15 @@
         <p>
           Με έως και 30 γευστικές επιλογές κάθε μέρα, η <strong>Κουζίνα από ΣΠΙΤΙ</strong> αποτελεί σημείο αναφοράς για καλό σπιτικό, γευστικό και υγιεινό φαγητό.
         </p>
-        <h3>Με προτάσεις<br>μαγειρευτών αλλά και της ώρας,</h3>
+        <h3 class="mt-4">Με προτάσεις<br>μαγειρευτών αλλά και της ώρας,</h3>
         <p>
           η δυνατότητα να απολαύσετε ένα υγιεινό και χορταστικό γεύμα με προσεκτικά επιλεγμένες πρώτες ύλες από τοπικούς προμηθευτές και τη στιγμή που το θέλετε, είναι πιο εύκολη από ποτέ!
         </p>
-        <h3>Απολαύστε γνώριμες γεύσεις<br>της ελληνικής κουζίνας</h3>
+        <h3 class="mt-4">Απολαύστε γνώριμες γεύσεις<br>της ελληνικής κουζίνας</h3>
         <p>
           αλλά και πιάτα με φαντασία που σας οδηγούν σε νέους γευστικούς δρόμους και χωρίς διατροφικές ενοχές.
         </p>
-        <h3>Οι λάτρεις της vegan διατροφής</h3>
+        <h3 class="mt-4">Οι λάτρεις της vegan διατροφής</h3>
         <p>
           θα ανακαλύψουν όχι μόνο κλασσικά πιάτα λαδερών και οσπρίων αλλά και προτάσεις φαγητών από ευεργετικά για τον οργανισμό προϊόντα, όπως φαγόπυρο, κινόα, προϊόντα ζέας κ.ά.
         </p>
