--- a/_includes/home-section-1.html
+++ b/_includes/home-section-1.html
@@ -3,7 +3,7 @@
 <section class="section-1 d-flex align-items-center">
   <div class="container">
     <div class="row">
-      <div class="col-md-5">
+      <div class="col-md-5 pb-5">
         <img src="/assets/logo.svg" alt="Κουζίνα από Σπίτι" class="img-fluid mb-5" />
         <p class="lead"><strong>Κάθε μέρα μαγειρεύουμε για εσάς με τον ίδιο ακριβώς τρόπο που μαγειρεύουμε για εμάς και τους δικούς μας ανθρώπους.</strong></p>
         <p class="lead"><strong>Ναταλί &amp; Μιχάλης</strong></p>
