--- a/_includes/home-section-2.html
+++ b/_includes/home-section-2.html
@@ -7,79 +7,79 @@
 
       <div class="card border-0">
         <div class="card-body">
-          <img src="/assets/menu-mon.svg" alt="">
+          <img src="/assets/menu-mon.svg" alt="" class="img-fluid">
         </div>
       </div>
 
       <div class="card border-0">
         <div class="card-body">
-          <img src="/assets/menu-tue.svg" alt="">
+          <img src="/assets/menu-tue.svg" alt="" class="img-fluid">
         </div>
       </div>
 
       <div class="card border-0">
         <div class="card-body">
-          <img src="/assets/menu-wed.svg" alt="">
+          <img src="/assets/menu-wed.svg" alt="" class="img-fluid">
         </div>
       </div>
 
       <div class="card border-0">
         <div class="card-body">
-          <img src="/assets/menu-thu.svg" alt="">
+          <img src="/assets/menu-thu.svg" alt="" class="img-fluid">
         </div>
       </div>
 
       <div class="card border-0">
         <div class="card-body">
-          <img src="/assets/menu-fri.svg" alt="">
+          <img src="/assets/menu-fri.svg" alt="" class="img-fluid">
         </div>
       </div>
 
       <div class="card border-0">
         <div class="card-body">
-          <img src="/assets/menu-sat.svg" alt="">
+          <img src="/assets/menu-sat.svg" alt="" class="img-fluid">
         </div>
       </div>
 
       <div class="card border-0">
         <div class="card-body">
-          <img src="/assets/menu-baked.svg" alt="">
+          <img src="/assets/menu-baked.svg" alt="" class="img-fluid">
         </div>
       </div>
 
       <div class="card border-0">
         <div class="card-body">
-          <img src="/assets/menu-salads.svg" alt="">
+          <img src="/assets/menu-salads.svg" alt="" class="img-fluid">
         </div>
       </div>
 
       <div class="card border-0">
         <div class="card-body">
-          <img src="/assets/menu-drinks.svg" alt="">
+          <img src="/assets/menu-drinks.svg" alt="" class="img-fluid">
         </div>
       </div>
 
       <div class="card border-0">
         <div class="card-body">
-          <img src="/assets/menu-sweets.svg" alt="">
+          <img src="/assets/menu-sweets.svg" alt="" class="img-fluid">
         </div>
       </div>
 
       <div class="card border-0">
         <div class="card-body">
-          <img src="/assets/menu-notes.svg" alt="">
+          <img src="/assets/menu-notes.svg" alt="" class="img-fluid">
         </div>
       </div>
 
       <div class="card border-0">
         <div class="card-body text-center">
-          <img src="/assets/menu-bread.svg" alt="">
+          <img src="/assets/menu-bread.svg" alt="" class="img-fluid">
         </div>
       </div>
 
       <div class="card border-0">
         <div class="card-body">
-          <img src="/assets/menu-prices.svg" alt="">
+          <img src="/assets/menu-prices.svg" alt="" class="img-fluid">
         </div>
       </div>
 
